/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.platform.android.instrumentation;

option java_package = 'com.google.devtools.mobileharness.platform.android.instrumentation.result.proto';
option java_outer_classname = "ErrorProto";
option java_multiple_files = true;

// Test result error message encapsulates the error of a single testResult.
// This is used only when the test ends in an Error or Failure
message Error {
  // Indicates the error message, e.g. Error message along with exception
  string error_message = 1;

  // Indicates the type of the error, e.g. AssertionError, XMLParserError
  string error_type = 2;

  // Indicates the stack trace along for the error
  string stack_trace = 3;
}
